# single_agent_pathfinding

./: .getignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: cli-usage.md
src/: __init__.py
src/sapf/: __init__.py
src/sapf/algorithms/: __init__.py  astar.py  base.py  bfs.py  dfs.py  registry.py  utils.py
src/sapf/algorithms/graph_based/: bellman_ford.py
src/sapf/algorithms/incremental/: dstar_lite.py
src/sapf/algorithms/informed/: astar.py  greedy_best_first.py  weighted_astar.py
src/sapf/algorithms/optimization/: OPTIMIZATION_README.md  genetic_algorithm.py
src/sapf/algorithms/uninformed/: bfs.py  dfs.py  dijkstra.py
src/sapf/cli/: __main__.py  main.py
src/sapf/cli/commands/: convert.py  generate.py  run.py  validate.py
src/sapf/core/: __init__.py  config.py  core.md  events.py  exceptions.py  map.py  node.py  result.py  types.py
src/sapf/generator/: __init__.py  generate.py  maze.py  movingai.py  presets.py  warehouse.py
src/sapf/generator/continuous/: __init__.py  models.py  presets.py
src/sapf/gui/: GUI_README.md  app.py  editor_controller.py  grid_view.py  main_window.py  palette.py  run_controller.py
src/sapf/gui/dialogs/: __init__.py  new_map_dialog.py
src/sapf/gui/widgets/: __init__.py  algorithm_picker.py  log_panel.py  stats_panel.py
src/sapf/io/: IO_README.md  __init__.py  converters.py  json_io.py  pickle_io.py  schema.py
tests/: test_map_model.py  test_step_interface.py
