[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sapf"
version = "0.1.0"
description = "Single-Agent Pathfinding framework with step-by-step visualization (GUI + CLI)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
    { name = "Your Name", email = "your.email@example.com" }
]

keywords = [
    "pathfinding",
    "astar",
    "dijkstra",
    "bfs",
    "grid-world",
    "visualization",
    "ai",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

dependencies = [
    "PySide6>=6.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov",
    "ruff>=0.1.6",
    "mypy>=1.6",
    "pyright>=1.1.330",
]

[project.urls]
Homepage = "https://github.com/A-D-Alamdari"
Repository = "https://github.com/A-D-Alamdari/single_agent_pathfinding"
Issues = "https://github.com/A-D-Alamdari/single_agent_pathfinding/issues"

# ----------------------------
# Entry points
# ----------------------------

[project.scripts]
sapf-gui = "sapf.gui.app:main"
sapf-cli = "sapf.cli:main"

# ----------------------------
# setuptools (src layout)
# ----------------------------

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["sapf*"]

# ----------------------------
# Ruff (linting)
# ----------------------------

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]
ignore = [
    "E203",  # whitespace before ':'
]

[tool.ruff.isort]
known-first-party = ["sapf"]

# ----------------------------
# MyPy
# ----------------------------

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
check_untyped_defs = true
show_error_codes = true

# Qt / PySide typing quirks
[[tool.mypy.overrides]]
module = "PySide6.*"
ignore_missing_imports = true

# ----------------------------
# Pyright
# ----------------------------

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false

# ----------------------------
# Pytest
# ----------------------------

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
